# FFSDM

./: .netrc  README.md  gldas.ipynb  main.py  pyproject.toml  test.py  test2.R
scripts/: download_gbif.R  install_packages.R  modeling.R  prepare_env.R
soil_temp_analysis/thresh_0C_2hours/: soil_low_temperature_2005_2hours_0degrees.nc
