[project]
name = "sdm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2025.11.0",
    "earthaccess>=0.15.1",
    "gcsfs>=2025.12.0",
    "h5netcdf>=1.7.3",
    "harmony-py>=1.3.3",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "keyring>=25.7.0",
    "matplotlib>=3.10.7",
    "netcdf4>=1.7.3",
    "pip>=25.3",
    "scipy>=1.16.3",
    "xarray>=2025.11.0",
    "zarr>=3.1.5",
]
